styling new, edit

--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,27 +1,30 @@
 <%= form_with(model: entry) do |form| %>
   <% if entry.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(entry.errors.count, "error") %> prohibited this entry from being saved:</h2>
-
-      <ul>
-        <% entry.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+    <div class="message is-danger ">
+      <div class="message-header">
+        <p><%= pluralize(entry.errors.count, "error") %> prohibited this entry from being saved:</p>
+      </div>
+      <div class="message-body">
+        <ul>
+          <% entry.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
   <div class="field">
-    <%= form.label :meal_type %>
-    <%= form.text_field :meal_type %>
+    <%= form.label :meal_type, class: "label" %>
+    <%= form.text_field :meal_type, class: "input"%>
   </div>
 
   <div class="field">
-    <%= form.label :descript %>
-    <%= form.text_field :descript %>
+    <%= form.label :descript, class: "label" %>
+    <%= form.text_field :descript, class: "input"%>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: "button is-success"%>
   </div>
 <% end %>
