--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,12 +1,33 @@
-<p>
-  <strong>Meal type:</strong>
-  <%= @entry.meal_type %>
-</p>
+<%content_for :title do %>
+  <%= @entry.meal_type %> &ndash; <%= DateTime.now.to_s(:nice_date) %>
+<% end %>
 
-<p>
-  <strong>Descript:</strong>
-  <%= @entry.descript %>
-</p>
 
-<%= link_to 'Edit', edit_entry_path(@entry) %> |
-<%= link_to 'Back', entries_path %>
+<div class="columns mt-6 is-centered">
+ <div class="column is-one-third">
+  <nav class="panel is-link">
+    <p class="panel-heading">
+      <%= @entry.meal_type %>
+    </p>
+    <div class="panel-block">
+      <%= @entry.descript %>
+    </div>
+
+  </nav>
+
+  <div class="colums is-mobile">
+    <div class="column">
+        
+      <%= link_to 'Edit', edit_entry_path(@entry), class: "button is-gray" %> |
+      <%= link_to 'Delete', entry_path(@entry), method: :delete, data: {confirm: "Are you sure" }, class: "button is-gray" %> |
+    
+    </div>
+  </div>
+ </div>
+</div>
+ 
+
+
+
+
+
