--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -18,8 +18,8 @@
   <div class="colums is-mobile">
     <div class="column">
         
-      <%= link_to 'Edit', edit_entry_path(@entry), class: "button is-gray" %> |
-      <%= link_to 'Delete', entry_path(@entry), method: :delete, data: {confirm: "Are you sure" }, class: "button is-gray" %> |
+      <%= link_to 'Edit', edit_entry_path(@entry), class: "button is-gray" %>
+      <%= link_to 'Delete', entry_path(@entry), method: :delete, data: {confirm: "Are you sure" }, class: "button is-gray" %>
     
     </div>
   </div>
