--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -24,6 +24,11 @@
     <%= form.text_field :descript, class: "input"%>
   </div>
 
+  <div class="field">
+    <%= form.label :calories, class: "label" %>
+    <%= form.text_field :calories, class: "input"%>
+  </div>
+
   <div class="actions">
     <%= form.submit class: "button is-success"%>
   </div>
