--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -12,7 +12,9 @@
     <div class="panel-block">
       <%= @entry.descript %>
     </div>
-
+    <div class="panel-block">
+      <div class="has-text-weight-bold">Calories:</div> <%= @entry.calories %>
+    </div>
   </nav>
 
   <div class="colums is-mobile">
