--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -1,9 +1,18 @@
 <div class="columns is-centered mt-6">
     <div class="column is-half">
         <% @entries.each do |day, entries| %>
-            <h3 class="class is-size-4 has-text-weight-bold has-text-centered">
-                Entries for <%= day %>
+            <h3 class="is-size-4 has-text-weight-bold mb-4 has-text-centered">
+                Entries for <%= day %> 
             </h3>
+            
+            <nav class="level is-mobile">
+                <div class="leve-item has-text-centered">
+                    <div>
+                        <p class="heading">Calories</p>
+                        <p class="title"><%= entries.pluck(:calories).sum %></p>
+                    </div>
+                </div>
+            </nav>
         
             <% entries.each do |entry| %>
                 <%= link_to entry_path(entry) do%>
