Typos and other fixes

--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -18,7 +18,7 @@
                 <%= link_to entry_path(entry) do%>
                 <div class="card">
                     <div class="card-content">
-                        <strong><%= entry.meal_type %></strong>
+                        <strong><%= entry.meal_type %></strong><br>
                         <%= entry.descript %>
                     </div>
                 </div>
