--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :descript, class: "label" %>
+    <%= form.label :description, class: "label" %>
     <%= form.text_field :descript, class: "input"%>
   </div>
 
