--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -35,7 +35,7 @@
         <% if content_for(:title) %>
             <%= yield :title %>
         <% else %>
-            Foold Log
+            Simple FoodLog
         <% end %>
       </p>
 
